@@ -2,5 +2,5 @@
 #define _TPM_VERSION_H_
 #define VERSION_MAJOR 0
 #define VERSION_MINOR 4
-#define VERSION_BUILD 1153876224
+#define VERSION_BUILD 1154457560
 #endif /* _TPM_VERSION_H_ */
